--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -8,6 +8,9 @@ app.home=Главная
 app.footer=Приложение стажировки <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
 app.login=Зайти как
 app.profile=профиль
+app.register=Регистрация
+app.registered=Вы зарегистрированы. Введите ваш логин/пароль.
+
 user.title=Пользователи
 user.edit=Редактировать пользователя
 user.add=Добавить пользователя
@@ -30,6 +33,7 @@ meal.endTime=До времени (исключая)
 meal.description=Описание
 meal.dateTime=Дата/Время
 meal.calories=Калории
+
 common.add=Добавить
 common.select=Выбрать
 common.deleted=Запись удалена
